# Auto-Follower

./: README.md
fusion_pointclouds/: CMakeLists.txt  package.xml
fusion_pointclouds/launch/: fusion_pointclouds.launch
fusion_pointclouds/src/: fusion_pointclouds.cpp
hybrid-a-star-annotation/: CMakeLists.txt  README.md  edited_by_hailong.txt  package.xml
hybrid-a-star-annotation/include/: algorithm.h  bucketedqueue.h  collisiondetection.cpp  collisiondetection.h  constants.h  dubins.h  dynamicvoronoi.h  gradient.h  helper.h  lookup.h  node2d.h  node3d.h  path.h  planner.h  point.h  pub_optimal_goal.h  pub_optimal_goal_new.h  smoother.h  vector2d.h  visualize.h
hybrid-a-star-annotation/launch/: config.rviz  path_planning.launch  path_planning_new.launch  rviz.launch
hybrid-a-star-annotation/scripts/: path2lane.py  path_tracking_purepursuit.py  record_rotation_and_position.py
hybrid-a-star-annotation/src/: algorithm.cpp  bucketedqueue.cpp  collisiondetection.cpp  dubins.cpp  dynamicvoronoi.cpp  main.cpp  node2d.cpp  node3d.cpp  path.cpp  planner.cpp  pub_optimal_goal.cpp  pub_optimal_goal_new.cpp  scale_up_map.cpp  smoother.cpp  visualize.cpp
linefit_ground_segmentation_ros/: CMakeLists.txt  package.xml
linefit_ground_segmentation_ros/include/linefit_ground_segmentation_ros/: ground_segmentation.h
linefit_ground_segmentation_ros/launch/: segmentation.launch  segmentation_params.yaml
linefit_ground_segmentation_ros/src/: bin.cc  ground_segmentation.cc  ground_segmentation_node.cc  ground_segmentation_test_node.cc  segment.cc  viewer.cc
rslidar_sdk-main/: CMakeLists.txt
rslidar_sdk-main/config/: config.yaml
rslidar_sdk-main/launch/: start.launch
rslidar_sdk-main/src/rs_driver/cmake/: rs_driverConfig.cmake
rslidar_sdk-main/src/source/: source_driver.hpp
tracker/: CMakeLists.txt  package.xml
tracker/include/: BYTETracker.h  STrack.h  Worker.h  yolov8.hpp
tracker/launch/: track_main.launch
tracker/msg/: Box.msg  BoxArray.msg
tracker/scripts/: tmp_pub_img.py
tracker/src/: BYTETracker copy.cpp  BYTETracker.cpp  README.md  STrack.cpp  main.cpp  main_ros.cpp  main_ros2.cpp  main_video.cpp  ros_img_sub.cpp  utils.cpp
usb_cam-develop/config/: usb_cam.yml
visual_follow_mapping/: CMakeLists.txt  package.xml
visual_follow_mapping/include/: array2d.h  harray2d.h  map.h  visual_follow_mapping.h
visual_follow_mapping/launch/: visual_follow_mapping.launch
visual_follow_mapping/src/: visual_follow_mapping.cpp
visual_follow_motor/: CMakeLists.txt  package.xml
visual_follow_motor/include/: system.h  visual_follow_motor.h
visual_follow_motor/launch/: visual_follow_motor.launch
visual_follow_motor/src/: visual_follow_motor.cpp
visual_follow_move/: CMakeLists.txt  package.xml
visual_follow_move/config/: params.yaml
visual_follow_move/include/: system.h  target_localization.h
visual_follow_move/launch/: visual_follow_move.launch
visual_follow_move/src/: main.cpp  system.cpp  target_localization.cpp
yhs_can_control/: CMakeLists.txt
yhs_can_control/include/yhs_can_control/: yhs_can_control.h
yhs_can_control/launch/: yhs_can_control.launch
yhs_can_control/src/: yhs_can_control.cpp
