<?xml version="1.0"?>
<package format="2">
  <name>tracker</name>
  <version>1.0.1</version>
  <description>Track target person</description>
  <maintainer email="caiwj@jihualab.com">ajia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>  
  <depend>message_runtime</depend>
</package>
